<resources>
    <string name="app_name">MySecretary</string>

    <!-- App id dùng để xác thực với fb -->
    <string name="facebook_app_id">670052139860500</string>

    <!-- Messages -->
    <string name="dang_nhap_thanh_cong">Đăng nhập thành công</string>
    <string name="dang_nhap_that_bai">Đăng nhập thất bại</string>
    <string name="loi_dang_nhap">Thiếu thông tin cần thiết!</string>
    <string name="dang_ky_thanh_cong">Đăng nhập thành công</string>
    <string name="dang_ky_that_bai">Đăng nhập thất bại</string>
    <string name="loi_dang_ky">Thiếu thông tin cần thiết!</string>

    <!-- Lịch -->
    <string name="thu_2">T2</string>
    <string name="thu_3">T3</string>
    <string name="thu_4">T4</string>
    <string name="thu_5">T5</string>
    <string name="thu_6">T6</string>
    <string name="thu_7">T7</string>
    <string name="chu_nhat">CN</string>
    <string name="time_12am">0 am</string>
    <string name="time_1am">1</string>
    <string name="time_2am">2</string>
    <string name="time_3am">3</string>
    <string name="time_4am">4</string>
    <string name="time_5am">5</string>
    <string name="time_6am">6</string>
    <string name="time_7am">7</string>
    <string name="time_8am">8</string>
    <string name="time_9am">9</string>
    <string name="time_10am">10</string>
    <string name="time_11am">11</string>
    <string name="time_12pm">12 pm</string>
    <string name="time_13pm">13</string>
    <string name="time_14pm">14</string>
    <string name="time_15pm">15</string>
    <string name="time_16pm">16</string>
    <string name="time_17pm">17</string>
    <string name="time_18pm">18</string>
    <string name="time_19pm">19</string>
    <string name="time_20pm">20</string>
    <string name="time_21pm">21</string>
    <string name="time_22pm">22</string>
    <string name="time_23pm">23</string>
    <string name="time_24pm">24</string>

    <!-- Đăng nhập -->
    <string name="dang_nhap_title"><b><i> MY SECRETARY </i></b></string>
    <string name="nut_dang_nhap">Đăng nhập</string>
    <string name="com_facebook_loginview_log_in_button_long">Facebook</string>
    <string name="quen_mat_khau"><i>Quên mật khẩu ?</i></string>
    <string name="dang_ky"><i> ĐĂNG KÝ </i></string>
    <string name="bo_qua_dang_nhap">hoặc <i>BỎ QUA</i></string>

    <!-- Đăng ký -->
    <string name="title_dang_ky">Đăng ký</string>
    <string name="ho_ten_hint">Họ tên</string>
    <string name="email_hint">Email</string>
    <string name="mat_khau_hint">Mật khẩu</string>
    <string name="dang_ky_button">Hoàn tất</string>

    <!-- Thêm và Cập nhật-->
    <string-array name="arr_group">
        <item>TKB</item>
        <item>Ca nhan</item>
    </string-array>
    <string-array name="arr_remind">
        <item>10 phút</item>
        <item>30 phut</item>
    </string-array>


</resources>
