<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_dangnhap"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".View.Fragment.TaiKhoan.DangNhapFragment">

    <!--Tiêu đề-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/title_dang_nhap_margin_top"
        android:text="@string/dang_nhap_title"
        android:textSize="@dimen/title_dang_nhap_text_size"
        android:textColor="@color/colorWhite"
        android:typeface="monospace"/>

    <!--Khung thông tin đăng nhập-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/khung_info_login_height"
        android:orientation="vertical"
        android:padding="@dimen/khung_info_dang_nhap_horizontal_padding"
        android:layout_marginTop="@dimen/khung_info_login_margin_top"
        android:background="@drawable/layoutshapemenu">

        <!--Tên đăng nhập-->
        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@drawable/edittextshape"
            android:hint=" Tên đăng nhập"
            android:textColorHint="@color/colorDivider"/>

        <!-- Mật khẩu -->
        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/item_khung_info_margin_top"
            android:background="@drawable/edittextshape"
            android:hint=" Mật khẩu"
            android:textColorHint="@color/colorDivider"/>

        <!-- Quên mật khẩu -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_khung_info_margin_top"
            android:gravity="right"
            android:text="@string/quen_mat_khau"
            android:textColor="@color/colorPrimary"/>

        <!-- Nút đăng nhập -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/btn_login_margin_top"
            android:background="@drawable/buttonloginshape"
            android:text="@string/nut_dang_nhap" />

        <!--Divider-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/divider_info_margin_top">
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_info_login"
                android:layout_weight="1"
                android:background="@color/colorDivider"/>
            <!-- Title -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Hoặc"
                android:gravity="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_info_login"
                android:layout_weight="1"
                android:background="@color/colorDivider"/>

        </LinearLayout>

        <!-- Đăng nhập FB và Gmail-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/item_khung_info_margin_top">
            <!-- Facebook -->
            <com.facebook.login.widget.LoginButton
                android:id="@+id/btnLoginFB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="@dimen/facebook_button_vertical_padding"
                android:paddingBottom="@dimen/facebook_button_vertical_padding"
                facebook:com_facebook_login_text="Log in"/>
            <!-- Goolge -->
            <com.google.android.gms.common.SignInButton
                android:id="@+id/btnLoginGmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

    <!-- Đăng ký và skip -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/textview_signin_margintop">
        <TextView
            android:id="@+id/tvDangky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dang_ky"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textsize_signin"/>
        <TextView
            android:id="@+id/skip_dang_nhap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:text="@string/bo_qua_dang_nhap"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textsize_signin"/>

    </LinearLayout>
</LinearLayout>
